--- a/getgrib/CHANGELOG
+++ b/getgrib/CHANGELOG
@@ -1,4 +1,7 @@
 
+Version 1.2-4, 2017-04-22, RS
+=============================
+Added missing-value handling for stations outside grid.
 
 Version 1.2-3, 2017-04-22, RS
 =============================
