--- a/getgrib/ChangeLog
+++ b/getgrib/ChangeLog
@@ -1,4 +1,10 @@
 
+Version 2.0-1, 2018-11-15, RS
+=============================
+Pushed old version which was based on grib-api to a new
+branch (will not be developed/maintained). The new
+version now runs with the ecCodes library.
+
 Version 1.2-4, 2017-04-22, RS
 =============================
 Added missing-value handling for stations outside grid.
